# apisix-az-genai-accelerator

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  DEPLOYING.md  README.md  ROADMAP.md  acr-build.yaml  apisix-az-genai-accelerator.code-workspace  pyproject.toml
config/: appsettings.dev.env  appsettings.example.env  appsettings.prod.env  appsettings.test.env  secrets.example.env
docs/: aca-gateway-autoscaling.md  azure-openai-quotas-regions-deployments.md  e2e-tests-apim-parity.md
docs/grafana/: prometheus_metric_labels.json
gateway/: .luarc.json  Dockerfile  gateway-entrypoint.sh
gateway/lua/apisix/extra/ai_accel/: hook.lua  managed_identity.lua  responses_affinity_store.lua  utils.lua
gateway/lua/apisix/plugins/: apim-gateway-logger.lua  apim-priority-headers.lua  azure-openai-auth.lua
gateway/lua/apisix/plugins/ai-drivers/: dynamic-azure-openai.lua
gateway_config_api/: Dockerfile  pyproject.toml
gateway_config_api/gateway_config_api/: __init__.py  app.py  models.py  service.py  settings.py
gateway_ops/: pyproject.toml
gateway_ops/gateway_ops/: _deploy_common.py  _e2e_common.py  _openai_secrets.py  _utils.py  build_and_push.py  build_and_push_aoai_api_simulator.py  build_and_push_gateway.py  build_and_push_gateway_config_api.py  build_and_push_hydrenv.py  deploy_bootstrap.py  deploy_foundry.py  deploy_observability.py  deploy_openai.py  deploy_platform.py  deploy_vars.py  deploy_workload.py  run_e2e_latency_routing.py  run_e2e_manage_spikes_with_payg.py  run_e2e_manage_spikes_with_payg_v2.py  run_e2e_prioritization.py  run_e2e_round_robin_simple.py  run_e2e_round_robin_simple_v2.py  run_e2e_round_robin_weighted.py  run_e2e_round_robin_weighted_v2.py  run_e2e_scalability.py  run_e2e_scalability_burst.py  run_e2e_tests.py  run_e2e_usage_tracking.py  sync_env.py
hydrenv/: Dockerfile  README.md  pyproject.toml  render-templates.sh
hydrenv/hydrenv/: __init__.py
hydrenv/hydrenv/cli/: __init__.py  app.py  parsers.py
hydrenv/hydrenv/core/: __init__.py  models.py
hydrenv/hydrenv/environment/: __init__.py  grouping.py  keyvault.py  processor.py
hydrenv/hydrenv/rendering/: __init__.py  engine.py  io.py
infra/terraform/modules/aca/alerts/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/aca/environment/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/aca/gateway/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/azure-ai-foundry/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/azure-key-vault/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/azure-monitor/apim-gateway-logs/: main.tf  outputs.tf  (+1 more)
infra/terraform/stacks/00-bootstrap/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.dev.example  terraform.tfvars.example  terraform.tfvars.prod.example  terraform.tfvars.test.example  variables.tf  versions.tf
infra/terraform/stacks/05-observability/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.dev.example  terraform.tfvars.example  terraform.tfvars.prod.example  terraform.tfvars.test.example  variables.tf  versions.tf
infra/terraform/stacks/10-platform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.dev.example  terraform.tfvars.example  terraform.tfvars.prod.example  terraform.tfvars.test.example  variables.tf  versions.tf
infra/terraform/stacks/15-foundry/: main.tf  outputs.tf  providers.tf  terraform.tfvars.dev.example  terraform.tfvars.example  terraform.tfvars.prod.example  terraform.tfvars.test.example  variables.tf  versions.tf
infra/terraform/stacks/15-openai/: main.tf  outputs.tf  terraform.tfvars.dev.example  terraform.tfvars.example  terraform.tfvars.prod.example  variables.tf  versions.tf
infra/terraform/stacks/20-workload/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.dev.example  terraform.tfvars.example  terraform.tfvars.prod.example  terraform.tfvars.test.example  variables.tf  versions.tf
infra/terraform/tooling/: .pre-commit-config.yaml  .tflint.hcl
ops/: pyproject.toml
ops/ops/: __init__.py  _deploy_common.py  _e2e_common.py  _openai_secrets.py  _utils.py  build_and_push_aoai_api_simulator.py  deploy_bootstrap.py  deploy_foundry.py  deploy_observability.py  deploy_platform.py  deploy_workload.py  run_e2e_latency_routing.py  run_e2e_prioritization.py  run_e2e_round_robin_simple.py  run_e2e_round_robin_weighted.py
templates/config/gateway/: apisix.yaml.j2  config.yaml.j2
templates/config/gateway/auth/: azure-openai-auth.yaml.j2  key-auth-consumers.yaml.j2  oidc-auth.yaml.j2
templates/config/gateway/plugin-metadata/: file-logger.yaml.j2  opentelemetry.yaml.j2
templates/config/gateway/plugins/: ai-proxy.yaml.j2  ai-rate-limit.yaml.j2  apim-gateway-logger.yaml.j2  apim-priority-headers.yaml.j2  cache.yaml.j2  cors.yaml.j2  ip-restriction.yaml.j2  opentelemetry.yaml.j2  proxy-buffering.yaml.j2  proxy-control.yaml.j2  quota-limit.yaml.j2  rate-limit.yaml.j2  response-rewrite.yaml.j2
templates/config/gateway/routes/: config-api-proxy.yaml.j2  health.yaml.j2  latency-routing.yaml.j2  openai-chat.yaml.j2  openai-completions.yaml.j2  openai-embeddings.yaml.j2  openai-responses.yaml.j2  prioritization-simple.yaml.j2
templates/config/otel-collector/: config.yaml.j2
templates/grafana-dashboard/: GenAIGateway-2025-10-29.json
(+11 files in other folders)
