[project]
name = "hydrenv"
version = "0.1.0"
description = "Generic, multi-root, env-driven Jinja2 config renderer (CLI)"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
]

[project.scripts]
hydrenv = "hydrenv.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hydrenv"]
